...
              android: 'SpaceGrotesk_600SemiBold',
              default: 'SpaceGrotesk_600SemiBold',
            }),
          },
        ]}
      >
        Nutrition Today
      </Text>
      <View
        style={[
          styles.nutritionColorBorder,
          {
            borderWidth: 1,
...
